# PyAlgebraRust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
src/combinatorics/: factorial.rs  mod.rs
