[package]
name = "linalg-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "linalg_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] } 
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
num-bigint = "0.4"
num-traits = "0.2"
